@@ -1,6 +1,6 @@
 hildon-application-manager (1:2.1.9~unreleased) unstable; urgency=low
 
-  * Fixes: NB#83547, NB#75393, NB#83764, NB#N83553, NB#83585.
+  * Fixes: NB#83547, NB#75393, NB#83764, NB#N83553, NB#83585, NB#80933.
 
  -- Marius Vollmer <marius.vollmer@nokia.com>  Thu, 03 Apr 2008 00:17:42 +0300
 
